<resources>
    <string name="app_name" translatable="false">"WiFiAnalyzer"</string>
    <string name="app_full_name" translatable="false">"WiFiAnalyzer (open-source)"</string>
    <string name="app_company_name" translatable="false">"VREM Software Development"</string>
    <string name="app_copyright">"Copyright \u00A9 2015 \u002D "</string>
    <string name="app_url" translatable="false">"https://vremsoftwaredevelopment.github.io/WiFiAnalyzer"</string>
    <string name="navigation_drawer_open">"Open navigation drawer"</string>
    <string name="navigation_drawer_close">"Close navigation drawer"</string>
    <string name="scanner_message">"Scanning &#8230;"</string>
    <string name="scanner_pause">"Pause"</string>
    <string name="scanner_play">"Play"</string>
    <string name="action_access_points">"Access Points"</string>
    <string name="action_channel_rating">"Channel Rating"</string>
    <string name="action_channel_graph">"Channel Graph"</string>
    <string name="action_time_graph">"Time Graph"</string>
    <string name="action_export">"Export"</string>
    <string name="action_channel_available">"Available Channels"</string>
    <string name="action_vendors">"Vendors"</string>
    <string name="action_settings">"Settings"</string>
    <string name="action_about">"About"</string>
    <string name="action_send" translatable="false">"Send File"</string>
    <string name="action_receive" translatable="false">"Receive File"</string>
    <string name="no_data">"No Data"</string>
    <string name="no_data_msg">"Please visit frequently ask questions section on our website."</string>
    <string name="no_data_url" translatable="false">"https://vremsoftwaredevelopment.github.io/WiFiAnalyzer/#faq"</string>
    <string name="no_data_geo_warning">"Some users running Android OS 6+ (Marshmallow) have reported that the location service must be enabled for the application to see WiFi networks. Marshmallow users may need to turn on the location service, even though WiFiAnalyzer does not explicitly require it. This appears to be attributed to a potential issue in Android OS 6+ that requires location service in order to see WiFi networks."</string>
    <string name="permission_msg">"As of Android Marshmallow, location permissions are required to perform a WiFi scan. You will be prompted to enable location services/permissions. Since this app does not require internet access, you can be confident that this app cannot transmit your location!"</string>
    <string name="wifi_channels_list_url" translatable="false">"https://en.wikipedia.org/wiki/List_of_WLAN_channels"</string>
    <string name="vendor_search_hint" translatable="false">"00:0C:41 CISCO"</string>
    <string name="export_not_available">"Export not available"</string>
    <string name="channel_rating_best">"Best Channels:"</string>
    <string name="channel_rating_best_none">"None"</string>
    <string name="channel_rating_best_alternative">", try alternative WiFi Band"</string>
    <string name="channel_rating_heading_rating">"Channel Rating"</string>
    <string name="channel_rating_heading_number">"Channel Number"</string>
    <string name="channel_rating_heading_count">"Access Point Count"</string>
    <string name="channel_short_name">"CH"</string>
    <string name="graph_channel_axis_x">"WiFi Channels"</string>
    <string name="graph_time_axis_x">"Scan Count"</string>
    <string name="graph_axis_y">"Signal Strength (dBm)"</string>
    <string name="start_menu_title">"Start"</string>
    <string name="start_menu_summary" translatable="false">"%s"</string>
    <string name="start_menu_key" translatable="false">"start_menu"</string>
    <string name="country_code_title">"Country"</string>
    <string name="country_code_summary" translatable="false">"%s"</string>
    <string name="country_code_key" translatable="false">"country_code"</string>
    <string name="wifi_band_key" translatable="false">"wifi_band"</string>
    <string name="scan_interval_title">"Scan Interval"</string>
    <string name="scan_interval_summary">"%d seconds between each scan"</string>
    <string name="scan_interval_key" translatable="false">"scan_interval"</string>
    <string name="sort_by_title">"Sort Access Points By"</string>
    <string name="sort_by_summary" translatable="false">"%s"</string>
    <string name="sort_by_key" translatable="false">"sort_by"</string>
    <string name="sort_by_default" translatable="false">"0"</string>
    <string name="sort_by_signal_strength">"Signal Strength"</string>
    <string name="sort_by_ssid" translatable="false">"SSID"</string>
    <string name="sort_by_channel">"Channel"</string>
    <string name="group_by_title">"Group Access Points By"</string>
    <string name="group_by_summary" translatable="false">"%s"</string>
    <string name="group_by_key" translatable="false">"group_by"</string>
    <string name="group_by_default" translatable="false">"0"</string>
    <string name="group_by_none">"None"</string>
    <string name="group_by_ssid" translatable="false">"SSID"</string>
    <string name="group_by_channel">"Channel"</string>
    <string name="ap_view_title">"Access Point Display"</string>
    <string name="ap_view_summary" translatable="false">"%s"</string>
    <string name="ap_view_key" translatable="false">"view"</string>
    <string name="ap_view_default" translatable="false">"0"</string>
    <string name="ap_view_complete">"Complete"</string>
    <string name="ap_view_compact">"Compact"</string>
    <string name="connection_view_title">"Connection Display"</string>
    <string name="connection_view_summary" translatable="false">"%s"</string>
    <string name="connection_view_key" translatable="false">"connection"</string>
    <string name="connection_view_default" translatable="false">"0"</string>
    <string name="connection_view_complete">"Complete"</string>
    <string name="connection_view_compact">"Compact"</string>
    <string name="connection_view_hide">"Hide"</string>
    <string name="graph_maximum_y_title">"Graph Maximum Signal Strength"</string>
    <string name="graph_maximum_y_summary" translatable="false">"%s"</string>
    <string name="graph_maximum_y_key" translatable="false">"graph_maximum_y"</string>
    <string name="graph_maximum_y_default" translatable="false">"2"</string>
    <string name="channel_graph_legend_title">"Channel Graph Legend Display"</string>
    <string name="channel_graph_legend_summary" translatable="false">"%s"</string>
    <string name="channel_graph_legend_key" translatable="false">"channel_graph_legend"</string>
    <string name="channel_graph_legend_default" translatable="false">"2"</string>
    <string name="time_graph_legend_title">"Time Graph Legend Display"</string>
    <string name="time_graph_legend_summary" translatable="false">"%s"</string>
    <string name="time_graph_legend_key" translatable="false">"time_graph_legend"</string>
    <string name="time_graph_legend_default" translatable="false">"0"</string>
    <string name="graph_legend_left">"Left"</string>
    <string name="graph_legend_right">"Right"</string>
    <string name="graph_legend_hide">"Hide"</string>
    <string name="theme_title">"Theme"</string>
    <string name="theme_summary" translatable="false">"%s"</string>
    <string name="theme_key" translatable="false">"theme"</string>
    <string name="theme_default" translatable="false">"0"</string>
    <string name="theme_dark">"Dark"</string>
    <string name="theme_light">"Light"</string>
    <string name="theme_system">"System"</string>
    <string name="wifi_off_on_exit_title">"WiFi off on Exit"</string>
    <string name="wifi_off_on_exit_key" translatable="false">"wifi_off_on_exit"</string>
    <string name="keep_screen_on_title">"Keep screen on"</string>
    <string name="keep_screen_on_key" translatable="false">"keep_screen_on"</string>
    <string name="language_title">"Language"</string>
    <string name="language_summary" translatable="false">"%s"</string>
    <string name="language_key" translatable="false">"language"</string>
    <string name="about_license_title">"License:"</string>
    <string name="about_description_title">"Description:"</string>
    <string name="about_description_text">"Optimize your WiFi network, by checking WiFi network status, signal strength and identifying crowded channels using an open-source WiFiAnalyzer for Android"</string>
    <string name="about_libraries_title">"Libraries Used:"</string>
    <string name="about_library_apache" translatable="false">"Apache Commons"</string>
    <string name="about_library_apache_url" translatable="false">"https://commons.apache.org"</string>
    <string name="about_library_graph_view" translatable="false">"Graph View"</string>
    <string name="about_library_graph_view_url" translatable="false">"http://www.android-graphview.org"</string>
    <string name="about_library_material" translatable="false">"Material Design Icons"</string>
    <string name="about_library_material_url" translatable="false">"https://design.google.com/icons"</string>
    <string name="about_contributor_title">"Contributors"</string>
    <string name="about_write_review">"Write a Review"</string>
    <string name="gpl" translatable="false">"<u>GNU General Public License v3.0</u>"</string>
    <string name="gpl_url" translatable="false">"http://www.gnu.org/licenses/gpl-3.0.html"</string>
    <string name="al" translatable="false">"<u>Apache License 2.0</u>"</string>
    <string name="al_url" translatable="false">"http://www.apache.org/licenses/LICENSE-2.0"</string>
    <string name="wifi_band_title" translatable="false">"2.4/5 GHz"</string>
    <string name="wifi_band_2ghz" translatable="false">"2.4 GHz"</string>
    <string name="wifi_band_5ghz" translatable="false">"5 GHz"</string>
    <string name="security_none">"None"</string>
    <string name="security_wps" translatable="false">"WPS"</string>
    <string name="security_wep" translatable="false">"WEP"</string>
    <string name="security_wpa" translatable="false">"WPA"</string>
    <string name="security_wpa2" translatable="false">"WPA2"</string>
    <string name="filter_title">"Filter"</string>
    <string name="filter_close">"Close"</string>
    <string name="filter_reset">"Reset"</string>
    <string name="filter_apply">"Apply"</string>
    <string name="filter_ssid_title" translatable="false">"SSID"</string>
    <string name="filter_ssid_key" translatable="false">"filter_ssid"</string>
    <string name="filter_ssid_hint" translatable="false">"ssid SSID"</string>
    <string name="filter_wifi_band_title">"WiFi Band"</string>
    <string name="filter_wifi_band_key" translatable="false">"filter_wifi_band"</string>
    <string name="filter_strength_title">"Signal Strength"</string>
    <string name="filter_strength_key" translatable="false">"filter_strength"</string>
    <string name="filter_security_title">"Security"</string>
    <string name="filter_security_key" translatable="false">"filter_security"</string>
    <string name="recvbutton" translatable="false">"Receive a file"</string>
    <string name="recvtext" translatable="false">"Receive a file"</string>
    <string name="tcpreceive" translatable="false">"Receive a file using TCP"</string>
    <string name="udprecieve" translatable="false">"Receive a file using UDP"</string>
    <string name="udpsend" translatable="false">"Send a file using UDP"</string>
    <string name="tcpsend" translatable="false">"Send a file using TCP"</string>
    <string name="Ping" translatable="false">"Send a ping to a Server"</string>
    <string name="EnterIP" translatable="false">"Enter an IP address to connect to</string>
    <string name="file" translatable="false">"Receiving the file..."</string>
    <string name="enteranIP" translatable="false">"Enter an IP...</string>
</resources>